// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render a heading 1 with small font size prop 1`] = `
.c0 {
  font-family: Avenir Next,sans-serif;
  font-variation-settings: "wght" 600;
  line-height: 1.3;
  margin: 0 0 18px 0;
  font-size: calc(1em + 0.5vw);
}

<h1
  className="c0"
>
  Heading
</h1>
`;

exports[`Should render a heading 1 with tiny font size prop 1`] = `
.c0 {
  font-family: Avenir Next,sans-serif;
  font-variation-settings: "wght" 600;
  line-height: 1.3;
  margin: 0 0 18px 0;
  font-size: calc(0.625em + 0.5vw);
}

<h1
  className="c0"
>
  Heading
</h1>
`;
